兼容java8写法